[package]
name = "spirv-std"
version = "0.4.0-alpha.7"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"
description = "Standard functions and types for SPIR-V"

[dependencies]
spirv-types = { path = "./shared", version = "0.4.0-alpha.3" }
spirv-std-macros = { path = "./macros", version = "0.4.0-alpha.3" }
